Fixed bugs Fixed overflow bug on index page Actually added the jQuery 3

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 
 body {
-    right: 0;
+    overflow: visible;
 }
 ::-webkit-scrollbar {
     width: 0;
